# dependent

./: .gitignore  LICENSE  README.md  dependent.cabal  stack.yaml
app/: Main.hs
src/: Core.hs  Lib.hs  Parser.hs  Pretty.hs  Syntax.hs  Test.hs
test/: CoreSpec.hs
