name:                dependent
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hawnzug/dependent#readme
license:             BSD3
license-file:        LICENSE
author:              hawnzug
maintainer:          hawnzug@gmail.com
copyright:           2017 hawnzug
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Core
                     , Syntax
                     , Parser
                     , Pretty
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , text
                     , containers
                     , haskeline
  default-language:    Haskell2010

executable dependent-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dependent
  default-language:    Haskell2010

test-suite dependent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CoreSpec
  build-depends:       base
                     , dependent
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dependent
